# re_trajectory-generator

./: .gitignore  README  TODO
kuka_IK/: .cproject  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  cmake_uninstall.cmake  kuka_ik-gnulinux.pc  manifest.xml  orocos-kuka_IK.pc.in
kuka_IK/include/: friComm.h
kuka_IK/src/: KukaLWR_Kinematics.cpp  KukaLWR_Kinematics.hpp  kuka_IK-component.cpp  kuka_IK-component.hpp
lwr_fri/: CMakeLists.txt  mainpage.dox  manifest.xml  readme.txt
lwr_fri/deploy/: .tb_history  FRIComponentOnly.xml  run.sh  test_LWR_naxes.xml
lwr_fri/deploy/cpf/: FRIServer.cpf  nAxesGeneratorPos.cpf  reporter_naxes.cpf
lwr_fri/src/: FRIComponent.cpp  FRIComponent.hpp  FRIDiagnostics.cpp  FRIDiagnostics.hpp
re_kuka/: CMakeLists.txt  manifest.xml
re_kuka/.svn/: all-wcprops  entries
re_kuka/.svn/text-base/: mainpage.dox.svn-base  manifest.xml.svn-base
re_kuka/controller/: arm_controller.launch  arm_controller.yaml  cabinet_controller.yaml
re_kuka/controller/.svn/: all-wcprops  entries
re_kuka/controller/.svn/text-base/: cabinet_controller.launch.svn-base  sdh_controller.launch.svn-base
re_kuka/description/: mainpage.dox
re_kuka/description/.svn/: all-wcprops  entries
re_kuka/description/.svn/text-base/: manifest.xml.svn-base
re_kuka/description/calibration/.svn/: all-wcprops  entries
re_kuka/description/calibration/.svn/text-base/: cob3-1.urdf.xacro.svn-base
re_kuka/description/gazebo/.svn/: all-wcprops  entries
re_kuka/description/meshes/.svn/: all-wcprops  entries
re_kuka/description/meshes/lbr_v0/: cone.stl
re_kuka/description/meshes/lbr_v0/.svn/: all-wcprops  entries
re_kuka/description/meshes/lbr_v0/convex/: lbr1.xml  lbr2_convex.iv  lbr2_convex.stlb  lbr3_convex.stla  lbr4.xml  lbr5.dae  lbr5.xml  lbr6.dae  lbr6_convex.iv  lbr6_convex.stla  lbr6_convex.stlb  lbr7.dae
re_kuka/description/meshes/lbr_v0/convex/.svn/: all-wcprops  entries
re_kuka/description/meshes/lbr_v0/convex/.svn/text-base/: lbr1.dae.svn-base  lbr1_convex.iv.svn-base  lbr1_convex.obj.svn-base  lbr1_convex.stla.svn-base  lbr1_convex.stlb.svn-base  lbr2.dae.svn-base  lbr2.xml.svn-base  (+24 more)
re_kuka/description/meshes/lbr_v0/iv/: lbr1.iv  lbr2.iv  lbr4.iv  lbr5.iv
re_kuka/description/meshes/lbr_v0/iv/.svn/: all-wcprops  entries
re_kuka/description/meshes/sdh_v0/.svn/: all-wcprops  entries
re_kuka/description/meshes/sdh_v0/convex/: finger_convex.stlb  finger_tip.dae  finger_tip_convex.iv  finger_tip_convex.stla  finger_tip_convex.stlb  knuckle.dae  knuckle_convex.stla  palm.dae  palm_convex.iv  palm_convex.stla  palm_convex.stlb
re_kuka/description/meshes/sdh_v0/convex/.svn/: all-wcprops  entries
re_kuka/description/meshes/sdh_v0/iv/: finger.iv  palm.iv
re_kuka/description/meshes/sdh_v0/iv/.svn/: all-wcprops  entries
re_kuka/description/robots/: lbr.urdf.xacro  lbr_pin.urdf.xacro  lbr_pin_cabinet.urdf.xacro
re_kuka/description/robots/.svn/: all-wcprops  entries
re_kuka/description/robots/.svn/text-base/: arm_sdh.urdf.xacro.svn-base  cabinet.urdf.xacro.svn-base  lbr.urdf.xacro.svn-base  lbr_sdh.urdf.xacro.svn-base
re_kuka/description/urdf/.svn/: all-wcprops  entries
re_kuka/description/urdf/.svn/text-base/: materials.urdf.xacro.svn-base
re_kuka/description/urdf/cabinet_v0/: cabinet.gazebo.xacro  cabinet.transmission.xacro  cabinet.urdf.xacro
re_kuka/description/urdf/cabinet_v0/.svn/: all-wcprops  entries
re_kuka/description/urdf/handle_v0/: handle.gazebo.xacro
re_kuka/description/urdf/handle_v0/.svn/: all-wcprops  entries
re_kuka/description/urdf/handle_v0/.svn/text-base/: handle.urdf.xacro.svn-base
re_kuka/description/urdf/lbr_v0/: lbr.urdf.xacro
re_kuka/description/urdf/lbr_v0/.svn/: all-wcprops  entries
re_kuka/description/urdf/pin_v0/: pin.urdf.xacro
re_kuka/description/urdf/pin_v0/.svn/: all-wcprops  entries
re_kuka/description/urdf/sdh_v0/: sdh.urdf.xacro
re_kuka/description/urdf/sdh_v0/.svn/: all-wcprops  entries
re_kuka/launch/: cabinet.launch  joint_states.bag  re_kuka.vcg  start.launch  visualize.launch
re_kuka/launch/.svn/: all-wcprops  entries
re_kuka/launch/.svn/text-base/: arm_sdh.launch.svn-base
re_kuka/scripts/: test_ik_trajectory.py
re_kuka/scripts/.svn/: all-wcprops  entries
re_kuka/scripts/.svn/text-base/: getCurrentPose.py.svn-base
re_kuka/src/: get_out_of_singularity.cpp  ik_solver_kdl.cpp  ik_trajectory_executor.cpp
re_kuka/src/.svn/: all-wcprops  entries
re_kuka/src/.svn/text-base/: arm_kinematics.cpp.svn-base  simple_trajectory.cpp.svn-base
re_kuka/srv/: ExecuteCartesianIKTrajectory.srv
re_kuka/srv/.svn/: all-wcprops  entries
trajectory_generator/: CMakeLists.txt  Makefile  manifest.xml
trajectory_generator/deploy/: CartesianGeneratorReal.xml  CartesianGeneratorReal_cartPosInput.xml  CartesianGeneratorSim.xml  CartesianGeneratorSim_cartPosInput.xml  FRIServer.xml  README  TrajectoryGeneratorFRI.xml  TrajectoryGeneratorReal_cartPos.xml  TrajectoryGeneratorReal_cartPosInput.xml  TrajectoryGeneratorReal_jntPos.xml  TrajectoryGeneratorReal_jntPosInput.xml  TrajectoryGeneratorSim_cartPosInput.xml  TrajectoryGeneratorSim_cartSpace.xml  TrajectoryGeneratorSim_jntPosInput.xml  TrajectoryGeneratorSim_jntSpace.xml  TrajectoryGeneratorSolo.xml  reportingSolo.cpf  run.sh
trajectory_generator/deploy/cpf/: FRIOnly.xml   FRIServer.cpf  FRIServer_cm4.cpf  cartesianGenerator.cpf  cartesianGeneratorReal.cpf  reportingCartReal.cpf  reportingCartSim.cpf  reportingReal.cpf  reportingSim.cpf  trajectoryGenerator.cpf
trajectory_generator/launch/: TGReal_cartPosInput.launch  TGReal_cartPosInputNoVis.launch  TGReal_jntPosInput.launch  TGReal_jntPosInputNoVis.launch  TGSim_cartPosInput.launch  TGSim_jntPosInput.launch  config_CartesianGenerator.vcg  config_TrajectoryGenerator.vcg  visualize.launch
trajectory_generator/src/: CartesianGenerator.cpp  CartesianGenerator.hpp  KukaLWR_Kinematics.cpp  KukaLWR_Kinematics.hpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  VelocityProfile_NonZeroInit.cpp  VelocityProfile_NonZeroInit.hpp
(+102 files in other folders)
